package ar.edu.unlam.pa.main;

public class App {

	public static void main(String[] args) {
		
//		Escenario stage = new Escenario();
//
//		stage.agregarElemento(new Elemento(new Hitbox(new Punto2D(0, 0), 1), Elemento.AMERICANO));
//		stage.agregarElemento(new Elemento(new Hitbox(new Punto2D(0.5, 0), 1), Elemento.JAPONES));
//		
//		System.out.println(stage.mostrarTodosLosElementos());
		
//		AvionVerdeChiquito a1 = new AvionVerdeChiquito(new Punto2D(0, 0));
//		a1.moverEnDireccion(90);
		      	   
	}

}
