package ar.edu.unlam.pa.servicios;

public interface Movimiento {

	public boolean moverEnDireccion(double angulo);
}
