package ar.edu.unlam.pa.servicios;

public interface MovimientoPlayer {

	public boolean moverArriba();
	
	public boolean moverAbajo();
	
	public boolean moverDerecha();
	
	public boolean moverIzquierda();
	
	public boolean moverArribaDerecha();
	
	public boolean moverArribaIzquierda();
	
	public boolean moverAbajoDerecha();
	
	public boolean moverAbajoIzquierda();
	
}
