@startuml
class Escenario [[java:ar.edu.unlam.pa.model.Escenario]] {
	+Escenario()
	+agregarElemento(nuevo: Elemento): void
	+eliminarElemento(destruido: Elemento): void
	+mostrarTodosLosElementos(): String
}
class Elemento {
}
Escenario --> "*" Elemento : listaElementos
class Avion [[java:ar.edu.unlam.pa.model.Avion]] {
	#vidaMaxima: double
	#vidaActual: double
	+Avion(hitbox: Hitbox, bando: int, vidaMaxima: double, velocidad: double)
}
class Elemento {
}
Elemento <|-- Avion
class App [[java:ar.edu.unlam.pa.main.App]] {
	+{static} main(args: String[]): void
}
class Punto2D [[java:ar.edu.unlam.pa.model.Punto2D]] {
	-x: double
	-y: double
	+Punto2D(x: double, y: double)
	+getX(): double
	+setX(x: double): void
	+getY(): double
	+setY(y: double): void
	-distancia(otro: Punto2D): double
	+equals(obj: Object): boolean
	+toString(): String
}
class AvionPlayer [[java:ar.edu.unlam.pa.model.AvionPlayer]] {
	-{static} RADIO_COLISION: double
	-{static} VIDA_MAXIMA: double
	-{static} VELOCIDAD_MOVIMIENTO: double
	+AvionPlayer(posicion: Punto2D)
	+moverArriba(): boolean
	+moverAbajo(): boolean
	+moverDerecha(): boolean
	+moverIzquierda(): boolean
	+moverArribaDerecha(): boolean
	+moverArribaIzquierda(): boolean
	+moverAbajoDerecha(): boolean
	+moverAbajoIzquierda(): boolean
}
class Avion {
}
Avion <|-- AvionPlayer
interface MovimientoPlayer {
}
MovimientoPlayer <|.. AvionPlayer
interface MovimientoPlayer [[java:ar.edu.unlam.pa.servicios.MovimientoPlayer]] {
	moverArriba(): boolean
	moverAbajo(): boolean
	moverDerecha(): boolean
	moverIzquierda(): boolean
	moverArribaDerecha(): boolean
	moverArribaIzquierda(): boolean
	moverAbajoDerecha(): boolean
	moverAbajoIzquierda(): boolean
}
class AvionVerdeChiquito [[java:ar.edu.unlam.pa.model.AvionVerdeChiquito]] {
	-{static} VELOCIDAD_MOVIMIENTO: double
	-{static} RADIO_COLISION: double
	-{static} VIDA_MAXIMA: double
	+AvionVerdeChiquito(posicion: Punto2D)
}
class Avion {
}
Avion <|-- AvionVerdeChiquito
interface Movimiento {
}
Movimiento <|.. AvionVerdeChiquito
class Hitbox [[java:ar.edu.unlam.pa.model.Hitbox]] {
	-radio: double
	+Hitbox(posicion: Punto2D, radio: double)
	+Hitbox(otro: Hitbox)
	+colisionaCon(otro: Hitbox): boolean
	+toString(): String
}
class Punto2D {
}
Hitbox --> "1" Punto2D : posicion
class Punto2D {
}
Hitbox --> "1" Punto2D : getPosicion()
interface Movimiento [[java:ar.edu.unlam.pa.servicios.Movimiento]] {
	moverEnDireccion(angulo: double): boolean
}
class Elemento [[java:ar.edu.unlam.pa.model.Elemento]] {
	-bando: int
	#velocidad: double
	+{static} AMERICANO: int
	+{static} JAPONES: int
	+Elemento(hitbox: Hitbox, bando: int, velocidad: double)
	-esEnemigo(otro: Elemento): boolean
	+colisionaCon(otro: Elemento): boolean
	+toString(): String
	+moverEnDireccion(angulo: double): boolean
}
class Hitbox {
}
Elemento --> "1" Hitbox : hitbox
class Punto2D {
}
Elemento --> "1" Punto2D : getPosicion()
interface Movimiento {
}
Movimiento <|.. Elemento

@enduml